--- a/myhockeyapp/views/player_stats.pug
+++ b/myhockeyapp/views/player_stats.pug
@@ -35,6 +35,10 @@ block content
                     a(href="/") 
                         | Dashboard
                 li
+                    i.fa.fa-user
+                    a(href="/playerstats/") 
+                        | Player Stats                        
+                li
                     i.fa.fa-line-chart
                     a(href="/playerstats/#{player_id}") 
                         | Player ##{player_id}                      
