--- a/myhockeyapp/views/players_stats.pug
+++ b/myhockeyapp/views/players_stats.pug
@@ -48,7 +48,7 @@ block content
                         table#datatable-gamestats.table.table-hover
                             thead
                                 tr
-                                    th #
+                                    th Player #
                                     th g
                                     th ppg
                                     th shg
