--- a/myhockeyapp/views/layout.pug
+++ b/myhockeyapp/views/layout.pug
@@ -203,11 +203,11 @@ html(lang="en")
               li
                 a(href="/playerstats")
                   i.fa.fa-fw.fa-user 
-                  | Player Stats
+                  | Skater Stats
               li
                 a(href="/gameentry") 
                   i.fa.fa-fw.fa-list-ul 
-                  | Schedule Games                
+                  | Games                
       div#page-wrapper
         block content
 
