--- a/myhockeyapp/views/player_stats.pug
+++ b/myhockeyapp/views/player_stats.pug
@@ -37,7 +37,7 @@ block content
                 li
                     i.fa.fa-user
                     a(href="/playerstats/") 
-                        | Player Stats                        
+                        | Skater Stats                        
                 li
                     i.fa.fa-line-chart
                     a(href="/playerstats/#{player_id}") 
