--- a/myhockeyapp/views/players_stats.pug
+++ b/myhockeyapp/views/players_stats.pug
@@ -37,12 +37,12 @@ block content
                 li
                     i.fa.fa-user
                     a(href="/playerstats") 
-                        | Player Stats                
+                        | Skater Stats                
     div.row
         div.col-lg-12
             div.panel.panel-default
                 div.panel-heading
-                    | Player Stats
+                    | Skater Stats
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-gamestats.table.table-hover
