--- a/myhockeyapp/views/team_stats_wins.pug
+++ b/myhockeyapp/views/team_stats_wins.pug
@@ -102,7 +102,16 @@ block scripts
     script(type="text/javascript").
         $(document).ready(function() {
             $('#datatable-wins').DataTable({
-                responsive: true
+                "responsive": true,
+                "bPaginate": true,
+                "bJQueryUI": true,
+                "bLengthChange": false,
+                "bFilter": false,
+                "bSort": false,
+                "bInfo": true,
+                "bAutoWidth": true,
+                "bProcessing": true,
+                "iDisplayLength": 10,                
             });
         });
 
